--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,8 +8,7 @@ jobs:
  runs-on: ubuntu-latest
  steps:
  - name: Checkout Code
- uses: actions/checkout@v3 # Using the latest v
-ersion available
+ uses: actions/checkout@v3 # Using the latest version available
  - name: Display Custom Message
  run: |
  echo "------------------------------------"
